# Transcriber

./: README.md  main.py  pyproject.toml
src/: config.py  embed.py  jobs.py  rag.py  schemas.py  summarize.py  transcription.py
