[project]
name = "audio-transcript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arq>=0.28.0",
    "boto3>=1.43.51",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.2",
    "faster-whisper>=1.2.1",
    "langchain>=1.3.14",
    "langchain-aws>=1.6.2",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
]
